# Helios

./: .gitignore  Cargo.toml  Dockerfile  README.md  Run_Guide.md  docker-compose.yml
Dev_Logs/: Fixes_01.md  Performance_Report_1.md  Phase01-Done.md  Phase02-Done.md
src/: components.rs  gui.rs  interactions.rs  main.rs  optics.rs  profiler.rs  raytracing.rs  source.rs  thermal.rs  units.rs
