[package]
name = "lithos"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.15"
glam = { version = "0.29", features = ["bytemuck"] }
nalgebra = "0.33"
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
criterion = "0.5"
fixed = "1.28"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"